<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <CheckedTextView
        android:layout_width="match_parent"
        android:padding="8dp"
        android:text="@string/third_question_text"
        android:layout_height="wrap_content"
        android:id="@+id/third_question" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/third_question"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:text="@string/untiy" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox"
        android:layout_alignBottom="@+id/checkBox"
        android:layout_marginStart="97dp"
        android:layout_toEndOf="@+id/checkBox"
        android:text="@string/unreal" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBox"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="15dp"
        android:text="@string/anvil" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox3"
        android:layout_alignBottom="@+id/checkBox3"
        android:layout_alignStart="@+id/checkBox2"
        android:text="@string/game_maker" />

</RelativeLayout>